# spark-mlir

./: CMakeLists.txt  README.md  example.mlir  pyproject.toml  run-tests.sh  test-run.mlir
include/: CMakeLists.txt
include/Spark/: CMakeLists.txt  SparkDialect.h  SparkDialect.td  SparkOps.h  SparkOps.td  SparkPasses.h  SparkPasses.td  SparkTypes.h  SparkTypes.td
include/Spark-c/: Dialects.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Spark/: CMakeLists.txt  SparkDialect.cpp  SparkOps.cpp  SparkPasses.cpp  SparkTypes.cpp
python/: CMakeLists.txt  SparkExtensionNanobind.cpp
python/mlir_spark/dialects/: SparkOps.td  spark_nanobind.py
spark-opt/: CMakeLists.txt  spark-opt.cpp
spark-plugin/: CMakeLists.txt  spark-plugin.cpp
spark-run/: CMakeLists.txt  spark-run.cpp
spark-translate/: CMakeLists.txt  spark-translate.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  spark-capi-test.c
test/Spark/: bark.mlir  dummy.mlir  spark-opt.mlir  spark-pass-plugin.mlir  spark-plugin.mlir  spark-translate.mlir
test/python/: smoketest.py
